--- a/Car_v3/Car_v3.csproj
+++ b/Car_v3/Car_v3.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ChiTietPhieuNhap.Designer.cs">
       <DependentUpon>ChiTietPhieuNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="help.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
