--- a/Car_v3/Car_v3.csproj
+++ b/Car_v3/Car_v3.csproj
@@ -252,5 +252,8 @@
   <ItemGroup>
     <None Include="Resources\Picture2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Picture2 %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
